load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_test", "nodejs_binary", "npm_package_bin")
load("@npm//react-scripts:index.bzl", "react_scripts", "react_scripts_test")

# Filename conventions described at
# https://create-react-app.dev/docs/running-tests#filename-conventions
_TESTS = [
    "src/**/*.test.js*",
    "src/**/*.test.ts*",
    "src/**/*.spec.js*",
    "src/**/*.spec.ts*",
    "src/**/__tests__/**/*.js*",
    "src/**/__tests__/**/*.ts*",
    "_tmp/**"
]


nodejs_binary(
    name = "builder",
    entry_point = "scripts/build.js",
    #data = _RUNTIME_DEPS + ["@npm//@types"],
)

# Remember to keep these up to date 
APP_BUNDLE = [
    "build/asset-manifest.json",
    "build/favicon.ico",
    "build/index.html",
    "build/logo192.png",
    "build/logo512.png",
    "build/manifest.json",
    "build/robots.txt",
    "build/static/js/main.js",
    "build/static/js/main.js.LICENSE.txt",
    "build/static/js/main.js.map",
    "build/static/media/logo.6ce24c58.svg"
]

genrule(
    name = "package",
    srcs = glob(
        [
            "public/*",
            "src/**/*",
            "node_modules/**/*"
        ],
        exclude = _TESTS,
    ) + [
        "package.json"
    ],# + _RUNTIME_DEPS + ["@npm//@types", "@npm//rewire"],
    outs = APP_BUNDLE,
    tools = ["//:builder"],
    output_to_bindir = True,
    cmd = "$(location //:builder) && cp -r build $(@D)"# --node_options=--require=./$(execpath chdir.js)"
)
